# otel-grpc-bazel

./: .bazelrc  BUILD.bazel  LICENSE  README.md  WORKSPACE  go.mod  go.sum
api/: BUILD.bazel  hello-service.proto.bak
client/: BUILD.bazel  client.go
server/: BUILD.bazel  server.go
tools/: bazelify_dependencies.sh  update_go_and_proto_build_files.sh
tools/analyzers/: nogo_config.json
